# dtc-de-zoomcamp

./: .gitignore
dbt/: dbt_project.yml
raw_data/green/: green_tripdata_2020-10.parquet
week1/: Dockerfile  README.md  docker-compose.yaml  homework-queries.sql  ingest_data.py  pg-test-connection.ipynb  pipeline.py  queries.sql  upload-data.ipynb
week1/raw-data/: upload-data.ipynb
week1/terraform/: terraform.tfstate  terraform.tfstate.backup
week2/: el_gcs_to_bq.py  el_parent_flow-deployment.yaml  etl_parent_flow-deployment.yaml  etl_web_to_gcs.py  etl_web_to_gcs_gh-deployment.yaml  etl_web_to_gcs_gh.py  etl_web_to_gcs_github.py  parameterized_web_to_gcs.py  requirements.txt
week2/q1/: etl_web_to_gcs.py
week2/q3/: el_gcs_to_bq-deployment.yaml  el_gcs_to_bq.py
week2/q4/: README.md  etl_web_to_gcs_gh-deployment.yaml  etl_web_to_gcs_gh.py
week3/: queries.sql
week5/: homework.ipynb  spark-to-gcloud.ipynb
week6/: .envrc  api-key-confluent-kafka.txt  client.ipynb  client.properties  pyproject.toml
week6/python/avro_example/: consumer.py  producer.py  settings.py
week6/python/json_example/: settings.py
week6/python/streams-example/faust/: branch_price.py  producer_fhv.py  producer_green.py  producer_taxi_json.py  stream.py  stream_count_vendor_trips.py  taxi_rides.py
week6/python/streams-example/pyspark/: streaming-notebook.ipynb
week7/: pipeline-deployment.yaml  pipeline_web_to_gcs.py  pipeline_web_to_gcs_bucket.py  pyproject.toml  testing.ipynb
week7/setup/: setup.sh
week7/terraform/: .terraform.lock.hcl  terraform.tfstate  terraform.tfstate.backup
week7/terraform/.terraform/: terraform.tfstate
(+9 files in other folders)
