[tool.poetry]
name = "week6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
kafka-python = "~1.4.6"
confluent-kafka = "^2.0.2"
requests = "^2.28.2"
avro = "^1.11.1"
faust = "^1.10.4"
fastavro = "^1.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
