[tool.poetry]
name = "week7"
version = "0.1.0"
description = "DataTalksClub Data Engineering Course Project by Adrian Baumann"
authors = ["Adrian Baumann"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.0.0rc1"
beautifulsoup4 = "^4.12.0"
requests = "^2.28.2"
pyarrow = "^11.0.0"
python-dotenv = "^1.0.0"
prefect = "^2.8.7"
prefect-gcp = {extras = ["cloud-storage"], version = "^0.3.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
